# aosp-system-core

./: .clang-format  .clang-format-2  .clang-format-4  0001-ashmem-Remove-hardcoded-PAGE_SIZE-usage-in-ashmem_te.patch  1  Android.bp  Android.mk  BUILD.bazel  CleanSpec.mk  METADATA  OWNERS  TEST_MAPPING  groups  platform_tools_tool_version.mk  project.config  tmpLogcat
adb/: Android.bp  Android.mk  CleanSpec.mk  OWNERS  README.md  SERVICES.TXT  SOCKET-ACTIVATION.txt  SYNC.TXT  TEST_MAPPING  adb.bash  adb.c  adb.cpp  adb.h  adb_auth.cpp  adb_auth.h  adb_auth_client.c  adb_auth_client.cpp  adb_auth_host.c  adb_auth_host.cpp  adb_client.c  adb_client.cpp  adb_client.h  adb_install.cpp  adb_io.cpp  adb_io.h  adb_io_test.cpp  adb_listeners.cpp  adb_listeners.h  adb_listeners_test.cpp  adb_main.c  adb_main.cpp  adb_mdns.cpp  adb_mdns.h  adb_trace.cpp  adb_trace.h  adb_unique_fd.cpp  adb_unique_fd.h  adb_utils.cpp  adb_utils.h  adb_utils_test.cpp  (+114 more)
aklog/: Android.mk  aklog.c
apexd/: Android.bp  apexd.cpp  apexd.h
ashmemd/: Android.bp  ashmemd.cpp  ashmemd.rc  ashmemd_client.cpp
auditd/: Android.mk  NOTICE  README  audit_log.c  audit_log.h  audit_rules.c  auditd.c  fields.c  libaudit.c  libaudit.h  netlink.c
base/: Android.bp  Android.mk  AndroidTest.xml  Blueprints  README.md  abi_compatibility.cpp  chrono_utils.cpp  cmsg.cpp  cmsg_test.cpp  errors_test.cpp  errors_unix.cpp  errors_windows.cpp  expected_test.cpp  fd_file.cpp  fd_file_test.cpp  file.cpp  file_test.cpp  file_wait.cpp  file_wait_generic.cpp  file_wait_linux.cpp  file_wait_test.cpp  fork_test.cpp  liblog_symbols.cpp  liblog_symbols.h  local_socket.cpp  local_socket_test.cpp  logging.cpp  logging_splitters.h  logging_splitters_test.cpp  logging_test.cpp  mapped_file.cpp  mapped_file_test.cpp  multiprocess.cpp  multiprocess_test.cpp  no_destruct_test.cpp  null_file.cpp  null_file_test.cpp  parsebool.cpp  parsebool_test.cpp  parsefloat_test.cpp  (+30 more)
bootstat/: Android.bp  Android.mk  OWNERS  boot_event_record_store.cpp  boot_event_record_store.h  boot_event_record_store_test.cpp  boot_reason_test.sh  (+6 more)
libcutils/: Android.bp  Android.mk  BUILD.bazel  Blueprints  KernelLibcutilsTest.xml  OWNERS  android_get_control_file.cpp  android_get_control_socket_test.cpp  android_reboot.c  android_reboot.cpp  ashmem-dev.c  ashmem-dev.cpp  ashmem-host.c  ashmem-host.cpp  ashmem_base_test.cpp  ashmem_host_test.cpp  ashmem_test.cpp  atomic-android-arm.S  atomic.c  canned_fs_config.c  canned_fs_config.cpp  config_utils.cpp  cpu_info.c  debugger.c  drop_caches_test.cpp  files.cpp  fs.c  fs.cpp  fs_config.c  fs_config.cpp  hashmap.cpp  iosched_policy.c  iosched_policy.cpp  libcutils.map  load_file.cpp  memory.c  mspace.c  multiuser.c  multiuser.cpp  native_handle.c  (+52 more)
libcutils/abi-dumps/arm64/source-based/: libcutils.so.lsdump
libcutils/abi-dumps/arm_arm64/source-based/: libcutils.so.lsdump
libcutils/arch-arm64/: android_memset.S
libcutils/arch-mips/: android_memset.S  android_memset.c
libcutils/arch-x86/: android_memset16.S  android_memset32.S  c  cache.h  cache_wrapper.S  sse2-memset16-atom.S  sse2-memset32-atom.S
libcutils/include/cutils/: android_get_control_file.h  android_reboot.h  ashmem.h  atomic.h  atrace_shmem.h  list.h  native_handle.h  properties.h  qtaguid.h  sched_policy.h  sockets.h  stdatomic.h  threads.h  trace.h  uevent.h
libcutils/include/private/: android_filesystem_capability.h  android_filesystem_config.h  android_projectid_config.h  canned_fs_config.h  fs_config.h
libcutils/include_vndk/cutils/: android_filesystem_config.h  debugger.h  stdatomic.h
libcutils/native_handle_fdsan/: Android.bp  native_handle_fdsan.cpp
libcutils/native_handle_fdsan/include/cutils/: native_handle_fdsan.h
libcutils/rust/: cutils.h
libcutils/tests/: Android.bp  Android.mk  AndroidTest.xml  AshmemTest.cpp  MemsetTest.cpp  PropertiesTest.cpp  fs_config.cpp  sched_policy_test.cpp  sockets_test.cpp  string.c  trace-dev_test.cpp
libcutils/tests/memset_mips/: Android.mk
property_service/libpropertyinfoparser/: Android.bp  BUILD.bazel  property_info_parser.cpp
property_service/libpropertyinfoparser/include/property_info_parser/: property_info_parser.h
(+3786 files in other folders)
