# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "includes",
    srcs = glob(["include/**/*.h"]),
    includes = ["include"],
)

filegroup(
    name = "android_filesystem_config_header",
    srcs = ["include/private/android_filesystem_config.h"],
)
